[tool.poetry]
name = "lmql"
version = "0.7.0b1"
description = "A query language for language models"
authors = [
  "Luca Beurer-Kellner",
  "Marc Fischer",
  "Martin Vechev",
]
homepage = "https://lmql.ai"
documentation = "https://docs.lmql.ai"
maintainers = ["The LMQL Team <hello@lmql.ai>"]
license = "Apache-2.0"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

# note that this overrides .gitignore
include = [
  "src/lmql/ui/*",
]
exclude = [
  { path = "src/lmql/ui/playground/node_modules", format = ["sdist", "wheel"] },
  { path = "src/lmql/ui/vscode", format = ["sdist", "wheel"] },
  # node.js code should be present in sdist but excluded from wheel
  { path = "web", format = ["wheel"] },
]

[tool.poetry.dependencies]
python = "^3.10"
astunparse = "1.6.3"
openai = "^0.27.8"
termcolor = "^2.3.0"
numpy = "^1.25.1"
tiktoken = "^0.4.0"
psutil = "^5.9.5"

accelerate = { version = "^0.21.0", optional = true }
transformers = { version = ">=4.28.1", optional = true }
llama-cpp-python = { version = "^0.1.77", optional = true }

myst-parser = { version = "^2.0.0", optional = true }
nbsphinx = { version = "~0.9.1", optional = true }
pydata-sphinx-theme = { version = "~0.13.1", optional = true }
shibuya = { version = "^2023.7.28", optional = true }
sphinx-book-theme = { version = "^1.0.1", optional = true }
sphinx-theme-builder = { version = "^0.2.0b2", optional = true }
flit-core = { version = "^3.9.0", optional = true } # compile-time dependency of sphinx-theme-builder
pandoc = { version = "^2.3", optional = true }
ipython = {version = "^8.14.0", optional = true}

[tool.poetry.extras]
hf = [ "accelerate", "transformers" ]
llama = [ "llama-cpp-python" ]
docs = [ "myst-parser", "nbsphinx", "pandoc", "pydata-sphinx-theme", "shibuya", "sphinx_book_theme" ]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
